--- a/Programmers_CodingTestPractice.vcxproj.filters
+++ b/Programmers_CodingTestPractice.vcxproj.filters
@@ -18,28 +18,58 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="크레인 인형뽑기 게임(2019 카카오 개발자 겨울 인턴십).cpp">
+    <ClCompile Include="Level1_3진법 뒤집기%28월간 코드 챌린지 시즌 1%29.cpp">
       <Filter>소스 파일\Level1</Filter>
     </ClCompile>
-    <ClCompile Include="두 개 뽑아서 더하기(월간 코드 챌린지 시즌 1).cpp">
+    <ClCompile Include="Level1_2016년%28연습문제%29.cpp">
       <Filter>소스 파일\Level1</Filter>
     </ClCompile>
-    <ClCompile Include="완주하지 못한 선수(해시).cpp">
+    <ClCompile Include="Level1_K번째수%28정렬%29.cpp">
       <Filter>소스 파일\Level1</Filter>
     </ClCompile>
-    <ClCompile Include="모의고사(완전 탐색).cpp">
+    <ClCompile Include="Level1_가운데 글자 가져오기%28연습문제%29.cpp">
       <Filter>소스 파일\Level1</Filter>
     </ClCompile>
-    <ClCompile Include="체육복(탑욕법(Greedy)).cpp">
+    <ClCompile Include="Level1_같은 숫자는 싫어%28연습문제%29.cpp">
       <Filter>소스 파일\Level1</Filter>
     </ClCompile>
-    <ClCompile Include="K번째수(정렬).cpp">
+    <ClCompile Include="Level1_나누어 떨어지는 숫자 배열%28연습문제%29.cpp">
       <Filter>소스 파일\Level1</Filter>
     </ClCompile>
-    <ClCompile Include="2016년(연습문제).cpp">
+    <ClCompile Include="Level1_두 개 뽑아서 더하기%28월간 코드 챌린지 시즌 1%29.cpp">
       <Filter>소스 파일\Level1</Filter>
     </ClCompile>
-    <ClCompile Include="3진법 뒤집기(월간 코드 챌린지 시즌 1).cpp">
+    <ClCompile Include="Level1_두 정수 사이의 합%28연습문제%29.cpp">
+      <Filter>소스 파일\Level1</Filter>
+    </ClCompile>
+    <ClCompile Include="Level1_모의고사%28완전 탐색%29.cpp">
+      <Filter>소스 파일\Level1</Filter>
+    </ClCompile>
+    <ClCompile Include="Level1_완주하지 못한 선수%28해시%29.cpp">
+      <Filter>소스 파일\Level1</Filter>
+    </ClCompile>
+    <ClCompile Include="Level1_체육복%28탑욕법%28Greedy%29%29.cpp">
+      <Filter>소스 파일\Level1</Filter>
+    </ClCompile>
+    <ClCompile Include="Level1_크레인 인형뽑기 게임%282019 카카오 개발자 겨울 인턴십%29.cpp">
+      <Filter>소스 파일\Level1</Filter>
+    </ClCompile>
+    <ClCompile Include="문자열 내 마음대로 정렬하기(연습문제).cpp">
+      <Filter>소스 파일\Level1</Filter>
+    </ClCompile>
+    <ClCompile Include="문자열 내 p와 y의 개수(연습문제).cpp">
+      <Filter>소스 파일\Level1</Filter>
+    </ClCompile>
+    <ClCompile Include="문자열 내림차순으로 배치하기(연습문제).cpp">
+      <Filter>소스 파일\Level1</Filter>
+    </ClCompile>
+    <ClCompile Include="문자열 다루기 기본(연습문제).cpp">
+      <Filter>소스 파일\Level1</Filter>
+    </ClCompile>
+    <ClCompile Include="서울에서 김서방 찾기(연습문제).cpp">
+      <Filter>소스 파일\Level1</Filter>
+    </ClCompile>
+    <ClCompile Include="소수 찾기(연습문제).cpp">
       <Filter>소스 파일\Level1</Filter>
     </ClCompile>
   </ItemGroup>
