--- a/Programmers_CodingTestPractice.vcxproj.filters
+++ b/Programmers_CodingTestPractice.vcxproj.filters
@@ -28,6 +28,9 @@
     <Filter Include="소스 파일\Level2\Summer/Winter Coding%28~2018%29">
       <UniqueIdentifier>{d76d5c30-ad93-4b11-9001-8852de9c9f9c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\Level2\2020 KAKAO BLIND RECRUITMENT">
+      <UniqueIdentifier>{22f08a30-90e4-4334-b8e7-6f188d960fa3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Level1_3진법 뒤집기%28월간 코드 챌린지 시즌 1%29.cpp">
@@ -173,6 +176,9 @@
     </ClCompile>
     <ClCompile Include="Level2_[3차] n진수 게임_2018 KAKAO BLIND RECRUITMENT.cpp">
       <Filter>소스 파일\Level2\2018 KAKAO BLIND RECRUITMENT</Filter>
+    </ClCompile>
+    <ClCompile Include="Level2_문자열 압축_2020 KAKAO BLIND RECRUITMENT.cpp">
+      <Filter>소스 파일\Level2\2020 KAKAO BLIND RECRUITMENT</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
