--- a/Programmers_CodingTestPractice.vcxproj.filters
+++ b/Programmers_CodingTestPractice.vcxproj.filters
@@ -37,6 +37,9 @@
     <Filter Include="소스 파일\Level2\2021 KAKAO BLIND RECRUITMENT">
       <UniqueIdentifier>{1c3cd072-d06a-4d3d-8b02-64c82d2c0381}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\Level2\월간 코드 챌린지 시즌 1">
+      <UniqueIdentifier>{26a28a7a-8321-4b8e-be63-af3cf9bd4392}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Level1_3진법 뒤집기%28월간 코드 챌린지 시즌 1%29.cpp">
@@ -200,6 +203,9 @@
     </ClCompile>
     <ClCompile Include="Level2_순위 검색_2021 KAKAO BLIND RECRUITMENT.cpp">
       <Filter>소스 파일\Level2\2021 KAKAO BLIND RECRUITMENT</Filter>
+    </ClCompile>
+    <ClCompile Include="Level2_삼각달팽이_월간 코드 챌린지 시즌 1.cpp">
+      <Filter>소스 파일\Level2\월간 코드 챌린지 시즌 1</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
