--- a/Programmers_CodingTestPractice.vcxproj
+++ b/Programmers_CodingTestPractice.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="C++_StringStream 활용법.cpp" />
     <ClCompile Include="Level1_ 내적(월간 코드 챌린지 시즌 1).cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
