2021-07-03 / 2021 데브매칭 웹 백엔드 개발 : 로또의 최고 순위와 최저 순위 : 자료구조, set

--- a/Programmers_CodingTestPractice.vcxproj.filters
+++ b/Programmers_CodingTestPractice.vcxproj.filters
@@ -255,5 +255,8 @@
     <ClCompile Include="[프로그래머스 레벨 2] 기능 개발.cpp">
       <Filter>소스 파일\Level2</Filter>
     </ClCompile>
+    <ClCompile Include="[프로그래머스 레벨 1] 로또의 최고 순위와 최저 순위.cpp">
+      <Filter>소스 파일\Level1</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
