2021-07-03 / 타겟 넘버 : dfs, 백트랙킹

--- a/Programmers_CodingTestPractice.vcxproj.filters
+++ b/Programmers_CodingTestPractice.vcxproj.filters
@@ -144,9 +144,6 @@
     <ClCompile Include="Level2_소수 찾기.cpp">
       <Filter>소스 파일\Level2</Filter>
     </ClCompile>
-    <ClCompile Include="Level2_타겟 넘버_DFS,BFS.cpp">
-      <Filter>소스 파일\Level2</Filter>
-    </ClCompile>
     <ClCompile Include="Level2_카펫_완전탐색.cpp">
       <Filter>소스 파일\Level2</Filter>
     </ClCompile>
@@ -257,6 +254,9 @@
     </ClCompile>
     <ClCompile Include="[프로그래머스 레벨 1] 로또의 최고 순위와 최저 순위.cpp">
       <Filter>소스 파일\Level1</Filter>
+    </ClCompile>
+    <ClCompile Include="[프로그래머스 레벨 2] 타겟 넘버.cpp">
+      <Filter>소스 파일\Level2</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
