2021-07-08 / 월간 코드 챌린지 시즌2 : 괄호 회전하기 : 자료구조(stack)

--- a/Programmers_CodingTestPractice.vcxproj.filters
+++ b/Programmers_CodingTestPractice.vcxproj.filters
@@ -273,5 +273,8 @@
     <ClCompile Include="[프로그래머스 레벨 2] 전화번호 목록.cpp">
       <Filter>소스 파일\Level2</Filter>
     </ClCompile>
+    <ClCompile Include="[프로그래머스 레벨 2] 괄호 회전하기.cpp">
+      <Filter>소스 파일\Level2</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
